--- a/learning-mode-2.html
+++ b/learning-mode-2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?timestamp=1473147595737"/>
+  <link rel="stylesheet" href="css/style.min.css"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -84,9 +84,7 @@
                         <!-- frames -->
                         <div class="pick-schedule-content-frame">
                             <div class="pick-schedule-content-frame-title">
-                                Обучение включает в себя две сессии,
-                                когда вам нужно будет присутствовать
-                                на занятиях лично, и 2 недели вебинаров
+                                Обучение и сертификация за 8 700 рублей
                             </div>
                             <p class="marg">Обучение включает в себя две сессии, когда вам
                                 нужно будет присутствовать на занятиях лично,
@@ -540,8 +538,8 @@
 
 <!-- scripts -->
 <script src="js/libs.js"></script>
-<script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1473147595737"></script>
-<script src="//localhost:35729/livereload.js"></script>
+
+<script src="js/common.js"></script>
+
 </body>
 </html>
