remove over border on checkbox

--- a/table-test.html
+++ b/table-test.html
@@ -66,29 +66,15 @@
 </header>
 
 
-  <div id="page-body" class="page-body">
-    <div class="container">
+    <div id="page-body" class="page-body mod-modal">
+        <div class="container">
+            <div class="wrapper-modal">
 
-      <!-- Begin Modal window call button -->
-      <ul class="modal-button">
-        <li>
-          <a href="#sign-up" class="el-btn blue-style">Sign Up</a>
-          <a href="#sign-up" class="el-btn blue-style">Sing In</a>
-        </li>
-        <li><a href="#sign-thx" class="el-btn blue-style">Sign Up - Thank you</a></li>
-        <li><a href="#forgot-pass" class="el-btn blue-style">Forgot password</a></li>
-        <li><a href="#forgot-thx" class="el-btn blue-style">Forgot success</a></li>
-        <li><a href="#promo-code" class="el-btn blue-style">Promo code</a></li>
-        <!-- new modals -->
-        <li><a href="#start-date" class="el-btn blue-style">Дата начала</a></li>
-        <li><a href="#disable-course" class="el-btn blue-style">Отписаться от курса</a></li>
-        <li><a href="#disable-course-extended" class="el-btn blue-style">Отписаться от курса 2</a></li>
-        <li><a href="#pick-schedule" class="el-btn blue-style">Режим обучения</a></li>
-      </ul>
-      <!-- End Modal window call button -->
 
+
+            </div>
+        </div>
     </div>
-  </div>
 
 <footer id="footer" class="wrapper footer">
   <div class="container">
@@ -514,12 +500,3 @@
 
 
 </div>
-
-
-<!-- scripts -->
-<script src="js/libs.js"></script>
-
-<script src="js/common.js"></script>
-
-</body>
-</html>
