--- a/learning-mode.html
+++ b/learning-mode.html
@@ -5,12 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-<<<<<<< HEAD
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.min.css"/>
-=======
-  <link rel="stylesheet" href="css/style.css?timestamp=1473161108932"/>
->>>>>>> e2180466738699505feeee326ffb65031d9a59bf
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -84,6 +79,7 @@
 
                         <div class="pick-schedule-content">
                             <!-- frames -->
+
                             <label for="check_mode_free" class="toggle-variant-wrap">
                                 <input type="radio" class="js-other-btn-name" id="check_mode_free" name="check_mode" value="free">
                                 <div class="pick-schedule-content-frame toggle-variant-item">
@@ -134,7 +130,7 @@
 
                                 <label for="check_meeting" class="toggle-variant-wrap mod-half">
                                     <input type="checkbox" id="check_meeting" name="check_meeting" value="check_meeting">
-                                    <div class="pick-schedule-content-frame toggle-variant-item">
+                                    <div class="pick-schedule-content-frame toggle-variant-item mod-small">
                                         <div class="pick-schedule-content-frame-title">
                                             Личные встречи - 1 200 рублей
                                         </div>
@@ -148,7 +144,7 @@
 
                                 <label for="check_tutor" class="toggle-variant-wrap mod-half">
                                     <input type="checkbox" id="check_tutor" name="check_tutor" value="check_tutor">
-                                    <div class="pick-schedule-content-frame toggle-variant-item">
+                                    <div class="pick-schedule-content-frame toggle-variant-item mod-small">
                                         <div class="pick-schedule-content-frame-title">
                                             Личный тьютор - 1 200 рублей
                                         </div>
@@ -608,14 +604,8 @@
 
 <!-- scripts -->
 <script src="js/libs.js"></script>
-<<<<<<< HEAD
 
 <script src="js/common.js"></script>
 
-=======
-<script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1473161108932"></script>
-<script src="//localhost:35729/livereload.js"></script>
->>>>>>> e2180466738699505feeee326ffb65031d9a59bf
 </body>
 </html>
