--- a/learning-mode.html
+++ b/learning-mode.html
@@ -5,12 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-<<<<<<< HEAD
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.min.css"/>
-=======
-  <link rel="stylesheet" href="css/style.css?timestamp=1473161108932"/>
->>>>>>> e2180466738699505feeee326ffb65031d9a59bf
+  <link rel="stylesheet" href="css/style.css?timestamp=1473233741052"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -76,8 +71,8 @@
             <div class="wrapper-modal">
 
 
-                <label class="wrap-win pick-schedule" >
-                    <form action="" method="">
+                <div class="wrap-win pick-schedule">
+                    <form action="#">
                         <div class="modal-title">
                             Выберите режим обучения и дополнительные возможности
                         </div>
@@ -85,7 +80,8 @@
                         <div class="pick-schedule-content">
                             <!-- frames -->
                             <label for="check_mode_free" class="toggle-variant-wrap">
-                                <input type="radio" class="js-other-btn-name" id="check_mode_free" name="check_mode" value="free">
+                                <input type="radio" class="js-other-btn-name" id="check_mode_free" name="check_mode"
+                                       value="free">
                                 <div class="pick-schedule-content-frame toggle-variant-item">
                                     <div class="pick-schedule-content-frame-title">
                                         Бесплатный просмотр
@@ -96,7 +92,6 @@
                                 </div>
                                 <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                             </label>
-
 
 
                             <div class="clear-fix pick-schedule-group">
@@ -116,8 +111,9 @@
                                 </label>
 
                                 <label for="check_webinar" class="toggle-variant-wrap mod-half">
-                                    <input type="checkbox" id="check_webinar" name="check_webinar" value="check_webinar">
-                                    <div class="pick-schedule-content-frame mod-large toggle-variant-item" >
+                                    <input type="checkbox" id="check_webinar" name="check_webinar"
+                                           value="check_webinar">
+                                    <div class="pick-schedule-content-frame mod-large toggle-variant-item">
                                         <div class="pick-schedule-content-frame-title">
                                             Участие в вебинарах
                                         </div>
@@ -129,11 +125,12 @@
                                             1 200 рублей
                                         </div>
                                     </div>
-                                  <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
+                                    <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                                 </label>
 
                                 <label for="check_meeting" class="toggle-variant-wrap mod-half">
-                                    <input type="checkbox" id="check_meeting" name="check_meeting" value="check_meeting">
+                                    <input type="checkbox" id="check_meeting" name="check_meeting"
+                                           value="check_meeting">
                                     <div class="pick-schedule-content-frame toggle-variant-item">
                                         <div class="pick-schedule-content-frame-title">
                                             Личные встречи - 1 200 рублей
@@ -143,7 +140,7 @@
 
                                         </p>
                                     </div>
-                                  <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
+                                    <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                                 </label>
 
                                 <label for="check_tutor" class="toggle-variant-wrap mod-half">
@@ -156,11 +153,10 @@
                                             Поможет понять все трудные моменты, даст пояснения и обратную связь
                                         </p>
                                     </div>
-                                  <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
+                                    <span class="select-check">Выбрано<i class="ico ico-g-gal"></i></span>
                                 </label>
 
                             </div>
-
 
 
                             <!-- end frames -->
@@ -174,11 +170,10 @@
                         </button>
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
+</div>
 
 <footer id="footer" class="wrapper footer">
   <div class="container">
@@ -608,14 +603,8 @@
 
 <!-- scripts -->
 <script src="js/libs.js"></script>
-<<<<<<< HEAD
-
-<script src="js/common.js"></script>
-
-=======
 <script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1473161108932"></script>
+<script src="js/common.js?timestamp=1473233741052"></script>
 <script src="//localhost:35729/livereload.js"></script>
->>>>>>> e2180466738699505feeee326ffb65031d9a59bf
 </body>
 </html>
