--- a/profession.html
+++ b/profession.html
@@ -205,11 +205,11 @@
                             <!-- Begin competence-section -->
                             <section class="css-shadow competence-section">
                                 <h2 class="title-section">Мои компетенции</h2>
-                                <div class="competence">
-                                    <div class="item">
+                                <ul class="competence">
+                                    <li class="item">
                                         <div class="title-competence">Технические компетенции 55%</div>
                                         <ul class="skill">
-                                            <li>
+                                            <li data-id="1">
                                                 <span class="name">Программирование</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
@@ -223,7 +223,7 @@
                                                         </span>
                                                     </span>
                                             </li>
-                                            <li>
+                                            <li data-id="2">
                                                 <span class="name">Maschine Learning</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
@@ -238,7 +238,7 @@
                                                     </span>
 
                                             </li>
-                                            <li>
+                                            <li data-id="3">
                                                 <span class="name">Анализ Big Data</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
@@ -252,7 +252,7 @@
                                                         </span>
                                                     </span>
                                             </li>
-                                            <li>
+                                            <li data-id="4">
                                                 <span class="name">Микробиом пресных водоемов</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
@@ -269,11 +269,11 @@
                                         </ul>
                                         <a class="more-link" href="#"><i class="icon-angle-down"></i>
                                             Еще 7 навыков</a>
-                                    </div>
-                                    <div class="item after-none">
+                                    </li>
+                                    <li class="item after-none">
                                         <div class="title-competence">Социальные компетенции 15%</div>
                                         <ul class="skill">
-                                            <li>
+                                            <li data-id="1">
                                                 <span class="name">Анализ Big Data</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
@@ -287,7 +287,7 @@
                                                         </span>
                                                     </span>
                                             </li>
-                                            <li>
+                                            <li data-id="2">
                                                 <span class="name">Микробиом пресных водоемов</span>
                                                 <ul class="skill-nav">
                                                     <li><span>идет обучение</span></li>
@@ -304,7 +304,7 @@
                                         </ul>
                                         <a class="more-link" href="#"><i class="icon-angle-down"></i>
                                             Еще 7 навыков</a>
-                                    </div>
+                                    </li>
                                     <div class="right-competence">
                                         <div class="title">
                                             8 из 15 <span>компетенций</span>
@@ -312,28 +312,28 @@
                                         </div>
                                         <div id="scroll-wrap" class="scroll-wrap">
                                             <ul class="list-competence">
-                                                <li class="active">R language</li>
-                                                <li>Orange Framework</li>
-                                                <li>Regression Analysis</li>
-                                                <li>Orange Framework</li>
-                                                <li>Regression Analysis</li>
-                                                <li>Orange Framework</li>
-                                                <li>Regression Analysis</li>
-                                                <li>Orange Framework</li>
-                                                <li>Independent Component Analysis</li>
-                                                <li>Independent Component Analysis</li>
-                                                <li>Orange Framework</li>
-                                                <li>Regression Analysis</li>
-                                                <li>Orange Framework</li>
-                                                <li>Regression Analysis</li>
-                                                <li>Orange Framework</li>
-                                                <li>Regression Analysis</li>
-                                                <li>Orange Framework</li>
+                                                <li data-parent-id="1" class="active">R language</li>
+                                                <li data-parent-id="2" >Orange Framework</li>
+                                                <li data-parent-id="3" >Regression Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
+                                                <li data-parent-id="1" >Regression Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
+                                                <li data-parent-id="1" >Regression Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
+                                                <li data-parent-id="1" >Independent Component Analysis</li>
+                                                <li data-parent-id="1" >Independent Component Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
+                                                <li data-parent-id="1" >Regression Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
+                                                <li data-parent-id="1" >Regression Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
+                                                <li data-parent-id="1" >Regression Analysis</li>
+                                                <li data-parent-id="1" >Orange Framework</li>
                                             </ul>
 
                                         </div>
                                     </div>
-                                </div>
+                                </ul>
                             </section>
                             <!-- End competence-section -->
 
