--- a/specialization.html
+++ b/specialization.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css?timestamp=1473265715615"/>
+  <link rel="stylesheet" href="css/style.min.css"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -127,8 +127,10 @@
                                 <span>6 500 </span>рублей
                             </div>
                             <div class="wrap-btn">
-                                <a href="#" class="el-btn pur-style">Записаться
+                                <a href="#" class="el-btn pur-style js-toggle">Записаться
                                     <span>начало 5 сентября <img src="images/icons/arrow-down-pure-o.svg" alt="icon"></span>
+                                    <span class="item-time border">с 25 сентября <span class="status">уже идет</span></span>
+                                    <span class="item-time">с 15 апреля</span>
                                 </a>
                             </div>
                             <ul class="list-nav">
@@ -796,8 +798,8 @@
 
 <!-- scripts -->
 <script src="js/libs.js"></script>
-<script src="js/core.js"></script>
-<script src="js/common.js?timestamp=1473265715615"></script>
-<script src="//localhost:35729/livereload.js"></script>
+
+<script src="js/common.js"></script>
+
 </body>
 </html>
