--- a/learning-mode-4.html
+++ b/learning-mode-4.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.min.css"/>
+  <link rel="stylesheet" href="css/style.css?timestamp=1473320648356"/>
   <script src="js/ie-detector.js"></script>
   <script src="js/modernizr.js"></script>
   <!--[if lte IE 9]><meta http-equiv="X-UA-Compatible" content="IE=edge"/><![endif]-->
@@ -82,7 +82,7 @@
                                 <input type="radio" id="radio_without_payment" name="learning_mode" value="without_payment" checked>
                                 <div class="toggle-variant-item pick-schedule-content-frame mod-marg">
                                     <div class="pick-schedule-content-frame-title">
-                                        Предоплата - 18 500 рублей
+                                        Предоплата - 18 500 рублей <span class="discount">Экономия 10%</span>
                                     </div>
                                     <p>
                                         Смотрите лекции, общайтесь на форуме и выполняйте
